Tue Sep  3 12:03:02 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (str2big_scan_digits): Extracted from rb_cstr_to_inum.

Tue Sep  3 11:23:57 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select_with_thread): rounding up the fraction of
	  tv_usec instead of rounding down.
	  this change is an experiment to get rid of failures on vc10-x64 CI.

Tue Sep  3 11:00:28 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (do_select): constify timeout.

	* win32/win32.c (rb_w32_select_with_thread): constify 10ms wait and
	  0ms wait structs.

Tue Sep  3 10:03:42 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/openssl/test_pair.rb
	  (OpenSSL::TestPair#test_write_nonblock_no_exceptions): on some CIs
	  such as Debian 6.0, Ubuntu 10.04, CentOS and vc10-x64 (maybe depend
	  on OpenSSL version), writing to SSLSocket after SSL_ERROR_WANT_WRITE
	  causes SSL_ERROR_SSL "bad write retry".

Tue Sep  3 08:20:46 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac-tbl.rb: update conversion table to recent OS X.
	  Previous table is used on Mac OS X 10.1 or prior.
	  This table is used on 10.2 or later. [ruby-dev:47680]

Tue Sep  3 07:49:25 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (NUM_STEP_SCAN_ARGS): On sencond thought, keep
	  Numeral#step backward compatible in that it raises TypeError
	  when nil is given as second argument.

	* test/ruby/test_float.rb (TestFloat#test_num2dbl): Revert.

	* test/ruby/test_numeric.rb (TestNumeric#test_step): Fix test
	  cases for the above change.

Tue Sep  3 07:39:58 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bytes_2comp): Define it only for little endian
	  environment.

Tue Sep  3 07:31:29 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (NUM_STEP_SCAN_ARGS): Numeral#step should raise
	  TypeError if a non-numeric parameter is given.

	* test/ruby/test_float.rb (TestFloat#test_num2dbl): Allow nil as
	  step, as with the keyword argument.
